--- a/l18n/de_DE.po
+++ b/l18n/de_DE.po
@@ -31,6 +31,15 @@ msgstr "Status"
 msgid "Comment"
 msgstr "Kommentar"
 
+msgid "Date"
+msgstr "Datum"
+
+msgid "Immediately"
+msgstr "Sofort"
+
+msgid "Select date"
+msgstr "Datum wählen"
+
 msgid ""
 msgstr ""
 
